# basher-backend

./: .gitignore  Cargo.toml  README.md  Secrets.dev.toml  Shuttle.toml
.cargo/: config.toml
.cargo-dev/: config.toml
database/: .dockerignore  .gitignore  init_dev.sh  init_schema.sh  schema.surql  start_dev.sh
src/: auth.rs  config.rs  error.rs  main.rs  miscs.rs
src/db/: config.rs  defs.rs  mod.rs
src/db/table/: defs.rs  mod.rs  reply.rs  topic.rs  user.rs
src/graphql/: defs.rs  mod.rs
src/graphql/mutation/: mod.rs  reply.rs  topic.rs  user.rs
src/graphql/query/: mod.rs  reply.rs  topic.rs  user.rs
src/sse/: defs.rs  mod.rs  reply.rs  topic.rs
