[package]
name = "basher"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-graphql = { version = "7.0.7", features = ["chrono"] }
async-graphql-axum = "7.0.7"
axum = "0.7.5"
bcrypt = "0.15.1"
chrono = "0.4.38"
cookie = "0.18.1"
derive_more = { version = "0.99.18", features = ["from", "display"] }
jsonwebtoken = "9.3.0"
serde = "1.0.204"
surrealdb = "1.5.4"
tokio = { version = "1.39.1", features = ["full"] }
tower = "0.4.13"
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["trace", "cors", "set-header"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"
