[package]
name = "basher"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-graphql = { version = "7.0.7", features = ["chrono"] }
async-graphql-axum = "7.0.13"
async-stream = "0.3.6"
axum = "0.7.5"
axum-extra = { version = "0.9.6", features = ["typed-header"] }
bcrypt = "0.15.1"
chrono = "0.4.38"
cookie = "0.18.1"
derive_more = { version = "0.99.18", features = ["from", "display"] }
futures = "0.3.31"
jsonwebtoken = "9.3.0"
serde = "1.0.204"
serde_json = "1.0.133"
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
surrealdb = "2.1.3"
tokio = { version = "1.39.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tower = "0.4.13"
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["trace", "cors", "set-header"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"
