[package]
name = "basher"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-graphql = { version = "7.0.15", features = ["chrono"] }
async-graphql-axum = "7.0.15"
async-stream = "0.3.6"
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
bcrypt = "0.17.0"
chrono = "0.4.39"
cookie = "0.18.1"
derive_more = { version = "2.0.1", features = ["from", "display"] }
futures = "0.3.31"
jsonwebtoken = "9.3.0"
serde = "1.0.217"
serde_json = "1.0.138"
shuttle-axum = "0.52.0"
shuttle-runtime = "0.52.0"
surrealdb = "2.1.4"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tower = "0.5.2"
tower-cookies = "0.11.0"
tower-http = { version = "0.6.2", features = ["trace", "cors", "set-header", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"
